# GdbCrashHandler

./: CMakeLists.txt  README.md  gdbcrashhandler.pro
example/: CMakeLists.txt  example.cpp  example.hpp  example.pro  example.qrc
lib/: CMakeLists.txt  GdbCrashHandler.cpp  GdbCrashHandler.hpp  GdbCrashHandler.pc.in  GdbCrashHandlerDialog.cpp  GdbCrashHandlerDialog.hpp  GdbCrashHandlerDialog.ui  lib.pro
lib/locale/: GdbCrashHandler_de.ts  locale.pro
service/: report.php
